# tapir-archicad-MCP

./: README.md  pyproject.toml
context/: project-brief-for-AI.md
patches/: macos_compatibility.patch
scripts/: apply_macos_patch.py  generate_tools.py  generator_config.py
src/tapir_archicad_mcp/: app.py  configure.py  constants.py  launch_all.py  logging_config.py  mcp_tapir_server.py  pagination.py  server.py
src/tapir_archicad_mcp/tools/: registration.py  search_index.py  tool_registry.py  validation.py
src/tapir_archicad_mcp/tools/custom/: functions.py  models.py
tests/: test_app_transport_config.py  test_custom_functions.py  test_error_passthrough.py  test_generate_tools.py  test_server_transports.py
tests/integration/: test_server_transports.py
tests/unit/: test_server_args.py
